# godot_mcp

./: .gitignore  LICENSE  RAG_info.md  README.md  docs_tree.txt  init_plan.md  pyproject.toml
docs/: PLAN.md  to_fix.txt
eval/: README.md  golden.jsonl  run_eval.py
ingest/: build_all.py  chunk.py  clean.py  embed_index.py  inventory.py  load_db.py  parse_classes.py  parse_guides.py
scripts/: publish_release.py  repl.py  smoke.py  sql_query.py
src/godot_mcp/: __init__.py  data.py  lookups.py  mcp_server.py  retrieval.py  textutil.py
