[project]
name = "godot-docs-mcp"
version = "0.1.0"
description = "MCP server for Godot documentation — structured lookups + semantic RAG"
readme = "README.md"
license = "MIT"
authors = [{ name = "NagoDaniel" }]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.1",
    "sqlite-vec>=0.1.9",
    "fastembed>=0.8.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/NagoDaniel/godot_mcp"
Issues = "https://github.com/NagoDaniel/godot_mcp/issues"

[project.scripts]
godot-docs-mcp = "godot_mcp.mcp_server:main"

# Ingestion-only deps (building the index from the HTML docs). End users who just
# run the server do not need these:  uv sync --extra ingest
[project.optional-dependencies]
ingest = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "markdownify>=1.2.3",
    "sphobjinv>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godot_mcp"]
